Feature/multiple role navlinks (#26)
* Added the setup for resend mail api

* Handled multiple roles for navlinks

* Increased the upload limit

* Security Enabled

* Added the API's to change email

---------

Co-authored-by: Saksham Singla <saksham.singla@abainfotech.com>